--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-dinky
-title: Tester Project
-description: Some testing for github pages
+title: <img alt="logo" src="https://github.com/tjb803/gsa-lib/raw/master/docs/gsa-logo.png">
+description: <b>My Stuff</b>
