--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,3 +1,4 @@
 theme: jekyll-theme-dinky
 title: My Test
 description: Testing my stuff
+logo: https://github.com/tjb803/gsa-lib/raw/master/docs/gsa-logo.png
